--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -4,7 +4,7 @@
     <div class="container">
         <hr>
         <h2>Artigos</h2>
-        <a href="/admin/articles/new" class="btn btn-success">Criar novo artigo</a>
+        <a href="/admin/articles/new" class="btn btn-primary">Criar novo artigo</a>
         <hr>
         <table class="table table-bordered">
             <thead>
@@ -13,11 +13,25 @@
                     <th>Título</th>
                     <th>Slug</th>
                     <th>Category</th>
-                    <th>Ações</th>
+                    <th style="min-width: 174.22222px;">Ações</th>
                 </tr>
             </thead>
             <tbody>                
-                
+                <% articles.forEach(article => { %>
+                    <tr>
+                        <td><%= article.id %></td>
+                        <td><%= article.title %></td>
+                        <td><%= article.slug %></td>
+                        <td><%= article.category.title %></td>
+                        <td>
+                            <a href="/admin/articles/edit/<%= article.id %>" class="btn btn-warning">Editar</a>
+                            <form method="POST" action="/articles/delete" style="display: inline;" onsubmit="confirmDelete(event, this)">
+                                <input type="hidden" name="id" value="<%= article.id %>">
+                                <button class="btn btn-danger">Deletar </button>
+                            </form>
+                        </td>
+                    </tr>
+                <% }) %>
             </tbody>
         </table>
     </div>
@@ -28,7 +42,7 @@
     function confirmDelete(event, form){
         event.preventDefault()
         console.log("O formulário não foi enviado")
-        let decision = confirm("Você quer deletar esta categoria?")
+        let decision = confirm("Você quer deletar este artigo?")
         if(decision) {
             form.submit()
         }else {
