--- a/views/admin/articles/new.ejs
+++ b/views/admin/articles/new.ejs
@@ -17,7 +17,7 @@
                             <option value="<%= category.id %>"><%= category.title %></option>
                         <% }) %>
                     </select><br>
-                    <button class="btn btn-success">Cadastrar</button>
+                    <button class="btn btn-primary">Cadastrar</button>
                 </form>
             </div>            
         </div>
