--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,8 +7,19 @@
         <li class="nav-item">
             <a class="nav-link" href="/admin/categories">Categorias</a>
         </li>
+
         <li class="nav-item">
             <a class="nav-link" href="/admin/articles">Artigos</a>
+        </li>  
+        
+        <li class="nav-item">
+            <a class="nav-link" href="/admin/users">Usuários</a>
+        </li> 
+    </ul>
+
+    <ul class="navbar-nav ml-auto">
+        <li style="float: right;" class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
         </li>
     </ul>
 </nav>
